syntax = "proto3";

// option java_multiple_files = true;
// option java_package = "io.grpc.examples.helloworld";
// option java_outer_classname = "HelloWorldProto";
// option objc_class_prefix = "HLW";

package blog;

// The greeting service definition.
service blog_service {
  rpc Show (ShowRequest) returns (ShowReply) {}
}

message BlogPost {
  int32 id = 1;
  string title = 2;
}

message ShowRequest {
  int32 id = 1;
}

message ShowReply {
  BlogPost blog_post = 1;
}
